--- a/ElevenNote.WebAPI_2/Web.config
+++ b/ElevenNote.WebAPI_2/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ElevenNote.WebAPI_2-20210218041730.mdf;Initial Catalog=aspnet-ElevenNote.WebAPI_2-20210218041730;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ElevenNote;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
